# my_kurs1

./: .env_template  README.md  main.py  pyproject.toml  user_settings.json
logs/: logs_settint.py  project_log.txt  report_log.txt
src/: api_utils.py  decoretors.py  reports.py  services.py  setting.py  utill_web.py  utils.py  views.py
tests/: .conftest.py  conftest.py  test_api_utils.py  test_reports.py  test_service.py  test_util_web.py  test_utils.py  test_views.py
