[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["aleksandr <kharitonov_am@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pathlib = "^1.0.1"


[tool.poetry.group.link.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 119